[package]
name = "boop-relay"
version = "0.1.0"
edition = "2021"
authors = ["iyoshok"]
homepage = "https://iyoshok.dev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = [ "full" ] }
argh = "0.1.7"
tokio-rustls = "0.23.4"
rustls-pemfile = "1.0.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
log = "0.4.17"
flexi_logger = { version = "0.22.3" }
argon2 = "0.4.0"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]